--- a/app/sass/header.sass
+++ b/app/sass/header.sass
@@ -9,6 +9,7 @@
       margin: 0 auto
       a
         margin-top: 50%
+        max-width: 100%
     #btn
       color: #fff
       cursor: pointer
